apps-helm/envoy-gateway/manifests/gateway-class-private.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: private
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
