apps-helm/envoy-gateway/manifests/gateway-internet.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internet
  annotations:
    external-dns.alpha.kubernetes.io/target: 'lga1.nulogorsk.com'
spec:
  gatewayClassName: internet
  addresses:
  - type: IPAddress
    value: 10.43.64.20
  listeners:
  - name: wildcard-desertbluffs-com-https
    protocol: HTTPS
    hostname: "*.desertbluffs.com"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: omni-certificate-rsa
        group: ""
      - kind: Secret
        name: omni-certificate-ecdsa
        group: ""
    allowedRoutes:
      namespaces:
        from: All
  - name: apex-desertbluffs-com-https
    protocol: HTTPS
    hostname: "desertbluffs.com"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: omni-certificate-rsa
        group: ""
      - kind: Secret
        name: omni-certificate-ecdsa
        group: ""
    allowedRoutes:
      namespaces:
        from: All
  - name: palworld-game-udp
    protocol: UDP
    port: 8211
    allowedRoutes:
      namespaces:
        from: All
  - name: palworld-modded-game-udp
    protocol: UDP
    port: 8311
    allowedRoutes:
      namespaces:
        from: All
