apps-helm/envoy-gateway/manifests/gateway-private.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  annotations:
    external-dns.alpha.kubernetes.io/target: '10.43.64.10'
spec:
  gatewayClassName: private
  addresses:
  - type: IPAddress
    value: 10.43.64.10
  listeners:
  - name: wildcard-radoncanyon-com-https
    protocol: HTTPS
    hostname: "*.radoncanyon.com"
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-radoncanyon-com-cert-rsa
        group: ""
      - kind: Secret
        name: wildcard-radoncanyon-com-cert-ecdsa
        group: ""
    allowedRoutes:
      namespaces:
        from: All
  - name: palworld-game-udp
    protocol: UDP
    port: 8211
    allowedRoutes:
      namespaces:
        from: All
  - name: palworld-modded-game-udp
    protocol: UDP
    port: 8311
    allowedRoutes:
      namespaces:
        from: All
