apps-helm/envoy-gateway/manifests/http-to-https-redirect.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect-internet
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - "*.desertbluffs.com"
  - "*.radoncanyon.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
    matches:
    - path:
        type: PathPrefix
        value: /
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect-private
spec:
  parentRefs:
  - name: private
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - "*.desertbluffs.com"
  - "*.radoncanyon.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
    matches:
    - path:
        type: PathPrefix
        value: /
